--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+      alt="Sahara Lion" 
+      
+      />
+      <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+      alt="Sahara Lion" 
+      title="Roaring Lion in the Wild "
+    />
+
   </body>
 </html>
